updating api authentication
